--- a/AoCBoiler.html
+++ b/AoCBoiler.html
@@ -5,11 +5,18 @@
 </head>
 <body>
 
+  <select id="day-select">
+    <option value="1">Day 1</option>
+    <option value="2">Day 2</option>
+    <option value="3">Day 3</option>
+    <option value="4">Day 4</option>
+  </select>
   <input type="file" id="file-input">
   <button id="upload-button">Analyse</button>
   <p id="result"></p>
   <p id="file-content"></p>
-  <script src='2.js' defer></script>
+
+  <script src="master.js"></script>
 
 </body>
 </html>
