--- a/AoCBoiler.html
+++ b/AoCBoiler.html
@@ -10,6 +10,26 @@
     <option value="2">Day 2</option>
     <option value="3">Day 3</option>
     <option value="4">Day 4</option>
+    <option value="5">Day 5</option>
+    <option value="6">Day 6</option>
+    <option value="7">Day 7</option>
+    <option value="8">Day 8</option>
+    <option value="9">Day 9</option>
+    <option value="10">Day 10</option>
+    <option value="11">Day 11</option>
+    <option value="12">Day 12</option>
+    <option value="13">Day 13</option>
+    <option value="14">Day 14</option>
+    <option value="15">Day 15</option>
+    <option value="16">Day 16</option>
+    <option value="17">Day 17</option>
+    <option value="18">Day 18</option>
+    <option value="19">Day 19</option>
+    <option value="20">Day 20</option>
+    <option value="21">Day 21</option>
+    <option value="22">Day 22</option>
+    <option value="23">Day 23</option>
+    <option value="24">Day 24</option>
   </select>
   <input type="file" id="file-input">
   <button id="upload-button">Analyse</button>
