updating css/html

--- a/AoCBoiler.html
+++ b/AoCBoiler.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1 style="text-align: center">How the TORY coded Christmas!</h1>
   <div id="file-input-container">
     <select id="day-select">
       <option value="1">Day 1</option>
@@ -39,8 +40,7 @@
     <button id="upload-button">Analyse</button>
   </div>
   <p id="result"></p>
-  <p id="file-content"></p>
-  <p id="log"></p>
+  <div><p id="file-content"></p></div>
 
   <script src="master.js"></script>
 
