--- a/AoCBoiler.html
+++ b/AoCBoiler.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <p id="bar"></p>
   <h1 style="text-align: center">How the TORY coded Christmas!</h1>
   <div id="file-input-container">
     <select id="day-select">
