--- a/AoCBoiler.html
+++ b/AoCBoiler.html
@@ -41,6 +41,7 @@
     <button id="upload-button">Analyse</button>
   </div>
   <p id="result"></p>
+  <p id="troubleshoot"></p>
   <div><p id="file-content"></p></div>
 
   <script src="master.js"></script>
